# AtomicQueue

./: CMakeLists.txt  README.md  main.cpp  mqueue.h
src/: emqueue.hpp  mqueue.hpp
tests/: test_i_mqueue.cpp  test_u_mqueue.cpp
